[package]
name = "fcsrv"
version = "0.2.1"
edition = "2021"
description = "Funcaptcha solver server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
image = "0.25"
ndarray = "0.15.6"
ort = "2.0.0-rc.2"
rayon = "1.8.1"
serde_json = "1.0.111"
sha2 = "0.10.8"
clap = { version = "4.4.18", features = ["derive", "env"] }
self_update = { version = "0.40.0", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"]  }
reqwest = { version = "0.11", default-features = false, features = ["rustls", "json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Http Server
axum = { version = "0.7.5" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower = { version = "0.4.13", default-features = false, features = ["limit"] }
tower-http = {version = "0.5.2", features = ["trace", "limit", "timeout"] }
rustls = { version = "0.23.7" }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48.0"
default-features = false
features = ["Win32_System_Com_CallObj", "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell_Common"]

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.5"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.28.0", features = ["user", "signal"]}
sysinfo = { version = "0.30.7", default-features = false }

# allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
mimalloc = { version = "0.1.39", default-features = false, optional = true }

[features]
default = []
# Enable jemalloc for binaries
jemalloc = ["jemallocator"]
# Enable bundled tcmalloc
tcmalloc = ["tcmalloc/bundled"]
# Enable snmalloc for binaries
snmalloc = ["snmalloc-rs"]
# Enable bundled rpmalloc
rpmalloc = ["dep:rpmalloc"]
# Enable mimalloc for binaries
mimalloc = ["dep:mimalloc"]


[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = "abort"
