[package]
name = "fs"
version = "0.3.6"
edition = "2021"
description = "ArkoseLabs funcaptcha challenge solver server"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/0x676e67/fs"
repository = "https://github.com/0x676e67/fs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typed-builder = "0.19"
base64 = "0.22"
image = "0.25"
ndarray = "0.16.0"
ort = { version = "2.0.0-rc.4", features = ["ndarray", "half"] }
sha2 = "0.10.8"
clap = { version = "4", features = ["derive", "env"] }
self_update = { version = "0.39.0", package = "self-github-update", features = ["archive-tar", "compression-flate2"]  }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
futures-util = "0.3.30"

# Logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Http Server
axum = { version = "0.7.5" }
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
tower = { version = "0.4.13", default-features = false, features = ["limit"] }
tower-http = {version = "0.5.2", features = ["trace", "limit", "timeout"] }
rustls = { version = "0.23" }
proc_variant ={ path = "src/onnx/proc_variant" }

# store
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48.0"
default-features = false
features = ["Win32_System_Com_CallObj", "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell_Common"]

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.5"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.28.0", features = ["user", "signal"]}
sysinfo = { version = "0.30.7", default-features = false }

# allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.4", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = ["jemalloc"]
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
rocm = ["ort/rocm"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]

jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]


[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = "abort"
rpath = true

[profile.dev]
rpath = true
